| Summary: | ASTERISK-29917: ami: FilterList action doesn't exist | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-02-13 10:13:37.000-0600 | Date Closed: | 2022-08-02 08:30:50 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/ManagerInterface Documentation |
| Versions: | 18.9.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The "FilterList" action exists in the documentation but there is literally no code in the tree for this. An attempt to use it results in a bad request[1].
This seems to be a known problem that has existed for a while: https://stackoverflow.com/questions/57212198/missing-filterlist-in-asterisk-ami-manager Either the documentation needs to be updated to remove FilterList, or the missing action needs to be added (preferably the latter, I would assume). [1] [2022-02-13 16:06:17] <--- Examining AMI action: --> [2022-02-13 16:06:17] action: FilterList [2022-02-13 16:06:17] actionid: 1644768377.8759 [2022-02-13 16:06:17] [2022-02-13 16:06:17] DEBUG[25229]: manager.c:2188 unref_mansession: Mansession: 0x7fa8dc7aee10 refcount now 2 [2022-02-13 16:06:17] DEBUG[25229]: manager.c:2188 unref_mansession: Mansession: 0x7fa8e4b3f2b0 refcount now 2 [2022-02-13 16:06:17] <-- Examining AMI event: --> [2022-02-13 16:06:17] Event: RequestBadFormat [2022-02-13 16:06:17] Privilege: security,all [2022-02-13 16:06:17] Timestamp: 1644768377.877144 [2022-02-13 16:06:17] SequenceNumber: 20 [2022-02-13 16:06:17] File: manager.c [2022-02-13 16:06:17] Line: 1865 [2022-02-13 16:06:17] Func: manager_default_msg_cb [2022-02-13 16:06:17] SystemName: REDACTED [2022-02-13 16:06:17] EventTV: 2022-02-13T16:06:17.877+0000 [2022-02-13 16:06:17] Severity: Error [2022-02-13 16:06:17] Service: AMI [2022-02-13 16:06:17] EventVersion: 1 [2022-02-13 16:06:17] SessionID: 0x7fa8e4b3f2b0 [2022-02-13 16:06:17] LocalAddress: IPV4/TCP/127.0.0.1/5038 [2022-02-13 16:06:17] RemoteAddress: IPV4/TCP/127.0.0.1/59880 [2022-02-13 16:06:17] RequestType: Action: FilterList [2022-02-13 16:06:17] SessionTV: 2022-02-13T16:03:44.882+0000 [2022-02-13 16:06:17] AccountID: REDACTED | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-02-13 10:13:39.621-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-08-02 08:30:52.253-0500 Change 18884 merged by Friendly Automation: manager: Remove documentation for nonexistent action. [https://gerrit.asterisk.org/c/asterisk/+/18884|https://gerrit.asterisk.org/c/asterisk/+/18884] By: Friendly Automation (friendly-automation) 2022-08-02 08:34:49.753-0500 Change 18922 merged by Friendly Automation: manager: Remove documentation for nonexistent action. [https://gerrit.asterisk.org/c/asterisk/+/18922|https://gerrit.asterisk.org/c/asterisk/+/18922] By: Friendly Automation (friendly-automation) 2022-08-02 09:09:07.950-0500 Change 18921 merged by George Joseph: manager: Remove documentation for nonexistent action. [https://gerrit.asterisk.org/c/asterisk/+/18921|https://gerrit.asterisk.org/c/asterisk/+/18921] By: Friendly Automation (friendly-automation) 2022-08-02 09:09:56.322-0500 Change 18924 merged by George Joseph: manager: Remove documentation for nonexistent action. [https://gerrit.asterisk.org/c/asterisk/+/18924|https://gerrit.asterisk.org/c/asterisk/+/18924] By: Friendly Automation (friendly-automation) 2022-08-02 09:26:33.388-0500 Change 18923 merged by George Joseph: manager: Remove documentation for nonexistent action. [https://gerrit.asterisk.org/c/asterisk/+/18923|https://gerrit.asterisk.org/c/asterisk/+/18923] | ||